--- a/index.html
+++ b/index.html
@@ -276,6 +276,14 @@
         }
     </style>
 </head>
+<script id="aclib" type="text/javascript" src="//acscdn.com/script/aclib.js"></script>
+<script type="text/javascript">
+    aclib.runAutoTag({
+        zoneId: '9npksluler',
+    });
+</script>
+<head>
+
 <body>
     <!-- Blue bar -->
     <div class="tptp_cvr">
